my-deployments01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment01
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
