my-deployments02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment02
  labels:
    app: backend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
