my-deployments03.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment03
  namespace: app
  labels:
    app: cache 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache 
  template:
    metadata:
      labels:
        app: cache 
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
