my-service01.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  ports:
  - name: frontend-svc
    protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    app: frontend
  type: ClusterIP # Можно не писать, по умолчанию
