my-service03.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  ports:
  - name: cache-svc
    protocol: TCP
    port: 8083
    targetPort: 8083
  selector:
    app: cache 
  type: ClusterIP # Можно не писать, по умолчанию
